--- a/aulas/29-mediaqueries/mq2/estilos/retrato.css
+++ b/aulas/29-mediaqueries/mq2/estilos/retrato.css
@@ -1,2 +1,9 @@
 @charset "UTF-8";
 /* Retrato */
+
+body {
+    background-image: url(../imagensmq2/cev-portrait.jpg);
+    background-position: center bottom;
+}
+
+
