--- a/aulas/29-mediaqueries/mq2/estilos/style.css
+++ b/aulas/29-mediaqueries/mq2/estilos/style.css
@@ -7,13 +7,16 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html body {
+html, body {
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 h1 {
     color: white;
     text-shadow: 3px 3px 0px #1526a7;
+    padding: 10px;
 }
